k8s/dev_k3s/08-network-policy_needs_fix/02-web-server-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-egress
  namespace: rust10x-web-app
spec:
  podSelector:
    matchLabels:
      app: rust10x-web-server

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: rust10x-db
      ports:
        - port: 5432

    - to:
        - podSelector:
            matchLabels:
              app: rust10x-valkey
      ports:
        - port: 6379
