k8s/dev_k3s/08-network-policy_needs_fix/03-web-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-ingress
  namespace: rust10x-web-app
spec:
  podSelector:
    matchLabels:
      app: rust10x-web-server

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 80
