k8s/dev_k3s/08-network-policy_needs_fix/04-db-mgmt-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-mgmt-egress
  namespace: rust10x-web-app
spec:
  podSelector:
    matchLabels:
      app: rust10x-db-mgmt

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: rust10x-db
      ports:
        - port: 5432
