k8s/dev_k3s/08-network-policy_needs_fix/05-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: rust10x-web-app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
